--- a/css/style.css
+++ b/css/style.css
@@ -4,4 +4,14 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
+    color:#0a645b;
+}
+
+p, li {
+    text-indent:10px;
+    color: #0b0a64;
+}
+
+h2 {
+    text-indent:5px;
 }
